# Todos

./: .gitignore  main.py  model.py  pyproject.toml  todo.py
models/: events.py  users.py
routes/: events.py  users.py
templates/: home.html  todo.html
