[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["Bond <bondarenko.jenek@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
