[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["Bond <bondarenko.jenek@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
Jinja2 = "^3.1.2"
multipart = "^0.2.4"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
